--- a/webapp/django-uwsgi.ini
+++ b/webapp/django-uwsgi.ini
@@ -2,5 +2,6 @@
 http = 0.0.0.0:8080
 chdir = %v
 wsgi-file = ./drf_network_pipeline/wsgi.py
+log-format = %(ltime) %(addr) - %(user) "%(method) %(uri) %(proto)" %(status) %(size) "%(referer)" "%(uagent)"
 processes = 5
-threads = 0
+threads = 1
