celery worker supported with postgres + redis + pgadmin as docker containers. also dual boot mode for running django using postgres or sqlite as the backend database. celery is using redis as the broker for tasks and task results. django can now publish a task to celery and get the result back if settings.CELERY_ENABLED is True. I will be porting all the heavyweight serializer methods into celery tasks for supporting training and predictions that would usually timeout an http client.

--- a/envs/drf-dev.env
+++ b/envs/drf-dev.env
@@ -1,12 +1,11 @@
-export ENVIRONMENT="Production"
+export ENVIRONMENT="Development"
 export DJANGO_CONFIGURATION="${ENVIRONMENT}"
 export DJANGO_SECRET_KEY="supersecret"
-export DJANGO_DEBUG="no"
-export DJANGO_TEMPLATE_DEBUG="no"
+export DJANGO_DEBUG="yes"
+export DJANGO_TEMPLATE_DEBUG="yes"
 export POSTGRES_HOST="0.0.0.0"
 export POSTGRES_PORT="5432"
 export POSTGRES_USER="postgres"
 export POSTGRES_PASSWORD="postgres"
 export POSTGRES_DB="webapp"
-export PGDATA="/var/lib/postgresql/data/pgdata"
 export CELERY_ENABLED="1"
