--- a/tox.ini
+++ b/tox.ini
@@ -13,8 +13,7 @@ basepython =
 
 [flake8]
 max-line-length = 80
-ignore = E126
-exclude = .tox/*,./build/*,./venv/*,./.eggs/*
+exclude = .tox/*,./build/*,./venv/*,./.eggs/*,./webapp/drf_network_pipeline/*/migrations
 
 [testenv:lint]
 deps = flake8
