--- a/envs/dev.env
+++ b/envs/dev.env
@@ -3,3 +3,4 @@ export DJANGO_CONFIGURATION="${ENVIRONMENT}"
 export DJANGO_SECRET_KEY="supersecret"
 export DJANGO_DEBUG="yes"
 export DJANGO_TEMPLATE_DEBUG="yes"
+export CELERY_ENABLED="0"
