--- a/envs/dev.env
+++ b/envs/dev.env
@@ -4,3 +4,4 @@ export DJANGO_SECRET_KEY="supersecret"
 export DJANGO_DEBUG="yes"
 export DJANGO_TEMPLATE_DEBUG="yes"
 export CELERY_ENABLED="0"
+export CACHEOPS_ENABLED="0"
