--- a/envs/drf-dev.env
+++ b/envs/drf-dev.env
@@ -9,3 +9,4 @@ export POSTGRES_USER="postgres"
 export POSTGRES_PASSWORD="postgres"
 export POSTGRES_DB="webapp"
 export CELERY_ENABLED="1"
+export CACHEOPS_ENABLED="1"
