--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ colorlog
 dj-database-url==0.4.2
 Django==2.0
 django-admin
+django-cacheops
 django-celery-results
 django-configurations==2.0.0
 django-debug-toolbar==1.9.1
