integrated antinex-utils into celery tasks which means django rest framework is now decoupled from the keras and tensorflow operations originally inside this repository. all heavy AI operations are now run inside https://github.com/jay-johnson/antinex-utils instead. this is critical to creating the celery/kombu antinex-engine for running as a standalone worker pool to run predictions straight out of the network-pipeline. this means this repository will become more of a build + tune application instead of the only live prediction system. django rest framework is now able to run predictions and handle describing a dnn using json from inside the request instead of hardcoded in the ml serializers. now able to experiment with deep vs wide neural networks to tune the model's predictive accuracy with the included files in: tests/django-antinex.json and tests/django-deep-antinex.json. also allows for reusing models after creation, and hopefully saving weights once the noted github issue in keras is resolved. unittests validate the make_predictions.py module works with antinex-datasets if the environment variable TEST_ANTINEX=1 is set before running unittests. predictions are also stored in the MLJobResults table and can be retrieved from the rest api. note right now there is no pagination support for large predictions records so the http client make take a few seconds for large datasets.

--- a/envs/dev.env
+++ b/envs/dev.env
@@ -5,3 +5,5 @@ export DJANGO_DEBUG="yes"
 export DJANGO_TEMPLATE_DEBUG="yes"
 export CELERY_ENABLED="0"
 export CACHEOPS_ENABLED="0"
+export USE_ENV="dev"
+unset POSTGRES_DB
