--- a/envs/drf-dev.env
+++ b/envs/drf-dev.env
@@ -10,3 +10,4 @@ export POSTGRES_PASSWORD="postgres"
 export POSTGRES_DB="webapp"
 export CELERY_ENABLED="1"
 export CACHEOPS_ENABLED="1"
+export USE_ENV="drf-dev"
