can now publish prediction jobs to the core workers with kombu. can also bypass building inside django and just use the core, right now with the only-core environment activated that no prediction results will be saved to the database

--- a/envs/dev.env
+++ b/envs/dev.env
@@ -6,4 +6,6 @@ export DJANGO_TEMPLATE_DEBUG="yes"
 export CELERY_ENABLED="0"
 export CACHEOPS_ENABLED="0"
 export USE_ENV="dev"
+export ANTINEX_WORKER_ENABLED="0"
+export ANTINEX_WORKER_ONLY="0"
 unset POSTGRES_DB
