--- a/envs/core-dev.env
+++ b/envs/core-dev.env
@@ -5,7 +5,7 @@ export DJANGO_DEBUG="yes"
 export DJANGO_TEMPLATE_DEBUG="yes"
 export CELERY_ENABLED="0"
 export CACHEOPS_ENABLED="0"
-export USE_ENV="dev"
+export USE_ENV="core-dev"
 export ANTINEX_WORKER_ENABLED="1"
 export ANTINEX_WORKER_ONLY="0"
 export ANTINEX_DELIVERY_MODE="persistent"
