--- a/compose.yml
+++ b/compose.yml
@@ -57,7 +57,6 @@ services:
     image: jayjohnson/ai-core:latest
     network_mode: "host"
     environment:
-      - JUPYTER_PASS=admin
       - SHARED_DIR=/opt/data
       - BROKER_URL=redis://0.0.0.0:6379/6
     depends_on:
@@ -75,7 +74,7 @@ services:
     image: jayjohnson/ai-core:latest
     network_mode: "host"
     env_file:
-      - ./envs/drf-dev.env
+      - ./envs/all-dev.env
     ports:
       - "8080:8080"
     depends_on:
@@ -93,7 +92,7 @@ services:
     image: jayjohnson/ai-core:latest
     network_mode: "host"
     env_file:
-      - ./envs/drf-dev.env
+      - ./envs/all-dev.env
     depends_on:
       - api
       - postgres
