--- a/envs/all-dev.env
+++ b/envs/all-dev.env
@@ -10,8 +10,8 @@ export POSTGRES_PASSWORD="postgres"
 export POSTGRES_DB="webapp"
 export CELERY_ENABLED="1"
 export CACHEOPS_ENABLED="1"
-export USE_ENV="drf-dev"
-export ANTINEX_WORKER_ENABLED="0"
+export USE_ENV="all-dev"
+export ANTINEX_WORKER_ENABLED="1"
 export ANTINEX_WORKER_ONLY="0"
 export ANTINEX_DELIVERY_MODE="persistent"
 export ANTINEX_AUTH_URL="redis://localhost:6379/6"
