fix for compose.yml containers to publish to the core

--- a/envs/all-dev.env
+++ b/envs/all-dev.env
@@ -1,26 +1,26 @@
-export ENVIRONMENT="Development"
-export DJANGO_CONFIGURATION="${ENVIRONMENT}"
-export DJANGO_SECRET_KEY="supersecret"
-export DJANGO_DEBUG="yes"
-export DJANGO_TEMPLATE_DEBUG="yes"
-export POSTGRES_HOST="0.0.0.0"
-export POSTGRES_PORT="5432"
-export POSTGRES_USER="postgres"
-export POSTGRES_PASSWORD="postgres"
-export POSTGRES_DB="webapp"
-export CELERY_ENABLED="1"
-export CACHEOPS_ENABLED="1"
-export USE_ENV="all-dev"
-export ANTINEX_WORKER_ENABLED="1"
-export ANTINEX_WORKER_ONLY="0"
-export ANTINEX_DELIVERY_MODE="persistent"
-export ANTINEX_AUTH_URL="redis://localhost:6379/6"
-export ANTINEX_EXCHANGE_NAME="webapp.predict.requests"
-export ANTINEX_EXCHANGE_TYPE="topic"
-export ANTINEX_QUEUE_NAME="webapp.predict.requests"
-export ANTINEX_WORKER_SSL_ENABLED="0"
-export ANTINEX_CA_CERTS=
-export ANTINEX_KEYFILE=
-export ANTINEX_CERTFILE=
-export ANTINEX_TLS_PROTOCOL=
-export ANTINEX_KEYFILE=
+ENVIRONMENT=Development
+DJANGO_CONFIGURATION=Development
+DJANGO_SECRET_KEY=supersecret
+DJANGO_DEBUG=yes
+DJANGO_TEMPLATE_DEBUG=yes
+POSTGRES_HOST=0.0.0.0
+POSTGRES_PORT=5432
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=webapp
+CELERY_ENABLED=1
+CACHEOPS_ENABLED=1
+USE_ENV=all-dev
+ANTINEX_WORKER_ENABLED=1
+ANTINEX_WORKER_ONLY=0
+ANTINEX_DELIVERY_MODE=persistent
+ANTINEX_AUTH_URL=redis://localhost:6379/6
+ANTINEX_EXCHANGE_NAME=webapp.predict.requests
+ANTINEX_EXCHANGE_TYPE=topic
+ANTINEX_QUEUE_NAME=webapp.predict.requests
+ANTINEX_WORKER_SSL_ENABLED=0
+ANTINEX_CA_CERTS=
+ANTINEX_KEYFILE=
+ANTINEX_CERTFILE=
+ANTINEX_TLS_PROTOCOL=
+ANTINEX_KEYFILE=
