setting worker defaults in the env files for docker

--- a/envs/all-dev.env
+++ b/envs/all-dev.env
@@ -11,6 +11,7 @@ POSTGRES_DB=webapp
 CELERY_ENABLED=1
 CACHEOPS_ENABLED=1
 USE_ENV=all-dev
+NUM_WORKERS=4
 ANTINEX_WORKER_ENABLED=1
 ANTINEX_WORKER_ONLY=0
 ANTINEX_DELIVERY_MODE=persistent
