--- a/envs/drf-dev.env
+++ b/envs/drf-dev.env
@@ -11,6 +11,7 @@ export POSTGRES_DB="webapp"
 export CELERY_ENABLED="1"
 export CACHEOPS_ENABLED="1"
 export USE_ENV="drf-dev"
+export NUM_WORKERS="1"
 export ANTINEX_WORKER_ENABLED="0"
 export ANTINEX_WORKER_ONLY="0"
 export ANTINEX_DELIVERY_MODE="persistent"
