--- a/envs/core-dev.env
+++ b/envs/core-dev.env
@@ -3,9 +3,15 @@ export DJANGO_CONFIGURATION="${ENVIRONMENT}"
 export DJANGO_SECRET_KEY="supersecret"
 export DJANGO_DEBUG="yes"
 export DJANGO_TEMPLATE_DEBUG="yes"
-export CELERY_ENABLED="0"
-export CACHEOPS_ENABLED="0"
+export POSTGRES_HOST="0.0.0.0"
+export POSTGRES_PORT="5432"
+export POSTGRES_USER="postgres"
+export POSTGRES_PASSWORD="postgres"
+export POSTGRES_DB="webapp"
+export CELERY_ENABLED="1"
+export CACHEOPS_ENABLED="1"
 export USE_ENV="core-dev"
+export NUM_WORKERS="3"
 export ANTINEX_WORKER_ENABLED="1"
 export ANTINEX_WORKER_ONLY="0"
 export ANTINEX_DELIVERY_MODE="persistent"
@@ -19,4 +25,3 @@ export ANTINEX_KEYFILE=
 export ANTINEX_CERTFILE=
 export ANTINEX_TLS_PROTOCOL=
 export ANTINEX_KEYFILE=
-unset POSTGRES_DB
