--- a/envs/all-dev.env
+++ b/envs/all-dev.env
@@ -3,6 +3,7 @@ DJANGO_CONFIGURATION=Development
 DJANGO_SECRET_KEY=supersecret
 DJANGO_DEBUG=yes
 DJANGO_TEMPLATE_DEBUG=yes
+COLLECT_STATICS=1
 POSTGRES_HOST=0.0.0.0
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
