--- a/webapp/staticfiles/.gitignore
+++ b/webapp/staticfiles/.gitignore
@@ -1,2 +1,22 @@
 *.log
-*.tgz
+*.tff
+*.tiff
+*.js
+*.json
+*.png
+*.jpg
+*.jpeg
+*.bmp
+*.gif
+*.gifv
+*.ipynb
+*.pdf
+*.css
+*.less
+*.woff
+*.eot
+admin/*
+rest_framework/*
+rest_framework_swagger/*
+debug_toolbar/*
+django_extensions/*
