--- a/envs/core-dev.env
+++ b/envs/core-dev.env
@@ -3,6 +3,7 @@ export DJANGO_CONFIGURATION="${ENVIRONMENT}"
 export DJANGO_SECRET_KEY="supersecret"
 export DJANGO_DEBUG="yes"
 export DJANGO_TEMPLATE_DEBUG="yes"
+export COLLECT_STATICS="1"
 export POSTGRES_HOST="0.0.0.0"
 export POSTGRES_PORT="5432"
 export POSTGRES_USER="postgres"
