--- a/envs/only-core-dev.env
+++ b/envs/only-core-dev.env
@@ -3,6 +3,7 @@ export DJANGO_CONFIGURATION="${ENVIRONMENT}"
 export DJANGO_SECRET_KEY="supersecret"
 export DJANGO_DEBUG="yes"
 export DJANGO_TEMPLATE_DEBUG="yes"
+export COLLECT_STATICS="1"
 export CELERY_ENABLED="0"
 export CACHEOPS_ENABLED="0"
 export USE_ENV="only-core-dev"
