--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ before_install:
   - export ANTINEX_KEYFILE=
   - echo "Starting Redis"
   - docker run --name antinex-redis -d redis
-  - docker ps -A
+  - docker ps -a
 
 install:
   - pip install -r requirements.txt
@@ -53,4 +53,4 @@ before_script:
   - psql -c "CREATE DATABASE webapp;" -U postgres
 
 script:
-  - . envs/drf-dev.env && echo "Running Tests for Environment=${ENVIRONMENT} DB=${POSTGRES_DB} with antinex.env=${USE_ENV}" && cd webapp && pip list && python manage.py migrate && python manage.py test
+  - . envs/drf-dev.env && docker ps -a && echo "Running Tests for Environment=${ENVIRONMENT} DB=${POSTGRES_DB} with antinex.env=${USE_ENV}" && cd webapp && pip list && python manage.py migrate && python manage.py test
