--- a/.travis.yml
+++ b/.travis.yml
@@ -40,9 +40,6 @@ before_install:
   - export ANTINEX_CERTFILE=
   - export ANTINEX_TLS_PROTOCOL=
   - export ANTINEX_KEYFILE=
-  - echo "Starting Redis"
-  - docker run --name antinex-redis -d redis
-  - docker ps -a
 
 install:
   - pip install -r requirements.txt
@@ -53,4 +50,7 @@ before_script:
   - psql -c "CREATE DATABASE webapp;" -U postgres
 
 script:
+  - echo "Starting Redis"
+  - docker run --name antinex-redis -p 6379:6379 -d redis
+  - docker ps -a
   - . envs/drf-dev.env && docker ps -a && echo "Running Tests for Environment=${ENVIRONMENT} DB=${POSTGRES_DB} with antinex.env=${USE_ENV}" && cd webapp && pip list && python manage.py migrate && python manage.py test
