--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,6 @@ language: python
 python:
   - 3.6
 
-services: postgresql
-
 env:
   - DJANGO=2.0
 
@@ -43,14 +41,10 @@ before_install:
 
 install:
   - pip install -r requirements.txt
-  - pip install django==$DJANGO --quiet
-  - pip install psycopg2 --quiet
-
-before_script:
-  - psql -c "CREATE DATABASE webapp;" -U postgres
 
 script:
   - echo "Starting Redis"
-  - docker run --name antinex-redis -p 6379:6379 -d redis
+  - docker run --name antinex-redis -p 6379:6379 -d redis:4.0.5-alpine
+  - docker run --name antinex-postgres -p 5432:5432 -e POSTGRES_PASSWORD=$POSTGRES_PASSWORD -e POSTGRES_USER=$POSTGRES_USER -e POSTGRES_DB=webapp -d postgres:10.2-alpine
   - docker ps -a
   - . envs/drf-dev.env && docker ps -a && echo "Running Tests for Environment=${ENVIRONMENT} DB=${POSTGRES_DB} with antinex.env=${USE_ENV}" && cd webapp && pip list && python manage.py migrate --run-syncdb && python manage.py migrate --fake webapp && python manage.py test
