fix for django to bind to the public WEBAPP_HOST ip address and WEBAPP_PORT from env vars

--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,4 @@ nohup.out
 db.sqlite3-journal
 webapp/drf_network_pipeline/docs/build/*.rst
 webapp/drf_network_pipeline/docs/latest.log
+webapp/staticfiles
