--- a/envs/dev.env
+++ b/envs/dev.env
@@ -3,6 +3,8 @@ export DJANGO_CONFIGURATION="${ENVIRONMENT}"
 export DJANGO_SECRET_KEY="supersecret"
 export DJANGO_DEBUG="yes"
 export DJANGO_TEMPLATE_DEBUG="yes"
+export WEBAPP_HOST="0.0.0.0"
+export WEBAPP_PORT="8080"
 export COLLECT_STATICS="0"
 export CELERY_ENABLED="0"
 export CACHEOPS_ENABLED="0"
