--- a/envs/drf-dev.env
+++ b/envs/drf-dev.env
@@ -3,6 +3,8 @@ export DJANGO_CONFIGURATION="${ENVIRONMENT}"
 export DJANGO_SECRET_KEY="supersecret"
 export DJANGO_DEBUG="yes"
 export DJANGO_TEMPLATE_DEBUG="yes"
+export WEBAPP_HOST="0.0.0.0"
+export WEBAPP_PORT="8080"
 export COLLECT_STATICS="1"
 export POSTGRES_HOST="0.0.0.0"
 export POSTGRES_PORT="5432"
