fix for network fqdns as ALLOWED_HOSTS or a list of fqdns with the env var DJANGO_ALLOWED_HOSTS=127.0.0.1,localhost,0.0.0.0,webapp,dev.antinex,api.antinex.com

--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,9 @@ py3venv
 *.tgz
 *.gz
 
+dev-compose.yml
+prod-compose.yml
+
 nohup.out
 db.sqlite3-journal
 webapp/drf_network_pipeline/docs/build/*.rst
