new venv for compose files to use the moved virtualenv dir

--- a/envs/pipeline-dev.env
+++ b/envs/pipeline-dev.env
@@ -27,3 +27,4 @@ ANTINEX_MISSING_VALUE=-1.0
 ANTINEX_INCLUDE_FAILED_CONVERSIONS=false
 ANTINEX_CLIENT_VERBOSE=1
 ANTINEX_CLIENT_DEBUG=0
+USE_VENV=/opt/venv
