--- a/envs/all-dev.env
+++ b/envs/all-dev.env
@@ -14,6 +14,7 @@ POSTGRES_DB=webapp
 CELERY_ENABLED=1
 CACHEOPS_ENABLED=1
 USE_ENV=all-dev
+USE_VENV=/opt/venv
 NUM_WORKERS=4
 ANTINEX_WORKER_ENABLED=1
 ANTINEX_WORKER_ONLY=0
