allow openshift deployment to set these

--- a/envs/openshift-dev.env
+++ b/envs/openshift-dev.env
@@ -8,9 +8,6 @@ WEBAPP_PORT=8080
 COLLECT_STATICS=1
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
-POSTGRES_DB=webapp
 REDIS_HOST=redis
 REDIS_PORT=6379
 CELERY_ENABLED=1
@@ -19,6 +16,7 @@ NUM_WORKERS=4
 ANTINEX_WORKER_ENABLED=1
 ANTINEX_WORKER_ONLY=0
 ANTINEX_DELIVERY_MODE=persistent
+ANTINEX_API_URL=http://api:8080
 ANTINEX_AUTH_URL=redis://redis:6379/6
 ANTINEX_EXCHANGE_NAME=webapp.predict.requests
 ANTINEX_EXCHANGE_TYPE=topic
