works on minishift 1.17.0 - running on a single vm with at least 8GB ram.

--- a/openshift/api/deployment.yaml
+++ b/openshift/api/deployment.yaml
@@ -25,6 +25,13 @@ spec:
       creationTimestamp: null
       labels:
         antinex: api
+        purpose: rest
+        layer: rest
+        auth: jwt
+        toolchain: swagger
+        messaging: redis
+        cache: redis
+        pubsub: publisher
     spec:
       containers:
       - command:
