--- a/openshift/core/deployment.yaml
+++ b/openshift/core/deployment.yaml
@@ -35,6 +35,14 @@ spec:
         - -c
         - cd /opt/antinex-core && . /opt/venv/bin/activate && source /opt/antinex-api/envs/openshift-dev.env && env | sort && /opt/antinex-core/run-antinex-core.sh
         env:
+        - name: POSTGRES_HOST
+          value: postgres
+        - name: POSTGRES_PORT
+          value: "5432"
+        - name: REDIS_HOST
+          value: redis
+        - name: REDIS_PORT
+          value: "6379"
         - name: BROKER_URL
           value: redis://redis:6379/6
         - name: USE_ENV
