--- a/openshift/api/deployment.yaml
+++ b/openshift/api/deployment.yaml
@@ -37,7 +37,7 @@ spec:
       - command:
         - /bin/bash
         - -c
-        - cd /opt/antinex-api && . /opt/venv/bin/activate && source /opt/antinex-api/envs/openshift-dev.env && env | sort && /opt/antinex-api/run-django.sh
+        - cd /opt/antinex-api && . /opt/venv/bin/activate && source /opt/antinex-api/envs/openshift-no-hostnames.env && env | sort && /opt/antinex-api/run-django.sh
         env:
         - name: ANTINEX_AUTH_URL
           value: redis://redis:6379/6
@@ -82,7 +82,7 @@ spec:
         - name: NUM_WORKERS
           value: "4"
         - name: POSTGRES_HOST
-          value: "postgres"
+          value: "primary"
         - name: POSTGRES_USER
           value: antinex
         - name: POSTGRES_PASSWORD
@@ -96,7 +96,7 @@ spec:
         - name: REDIS_PORT
           value: "6379"
         - name: USE_ENV
-          value: openshift-dev
+          value: openshift-no-hostnames
         - name: USE_VENV
           value: /opt/venv
         - name: WEBAPP_HOST
