--- a/openshift/core/deployment.yaml
+++ b/openshift/core/deployment.yaml
@@ -33,10 +33,10 @@ spec:
       - command:
         - /bin/bash
         - -c
-        - cd /opt/antinex-core && . /opt/venv/bin/activate && source /opt/antinex-api/envs/openshift-dev.env && env | sort && /opt/antinex-core/run-antinex-core.sh
+        - cd /opt/antinex-core && . /opt/venv/bin/activate && source /opt/antinex-api/envs/openshift-no-hostnames.env && env | sort && /opt/antinex-core/run-antinex-core.sh
         env:
         - name: POSTGRES_HOST
-          value: postgres
+          value: primary
         - name: POSTGRES_PORT
           value: "5432"
         - name: REDIS_HOST
@@ -52,7 +52,7 @@ spec:
         - name: SHARED_DIR
           value: /opt/data
         - name: USE_ENV
-          value: openshift-dev
+          value: openshift-no-hostnames
         - name: USE_VENV
           value: /opt/venv
         image: jayjohnson/ai-core:latest
