--- a/openshift/worker/deployment.yaml
+++ b/openshift/worker/deployment.yaml
@@ -33,7 +33,7 @@ spec:
       - command:
         - /bin/bash
         - -c
-        - cd /opt/antinex-api && . /opt/venv/bin/activate && source /opt/antinex-api/envs/openshift-dev.env && env | sort && /opt/antinex-api/run-worker.sh && tail -f /etc/hosts
+        - cd /opt/antinex-api && . /opt/venv/bin/activate && source /opt/antinex-api/envs/openshift-no-hostnames.env && env | sort && /opt/antinex-api/run-worker.sh && tail -f /etc/hosts
         env:
         - name: ANTINEX_AUTH_URL
           value: redis://redis:6379/6
@@ -80,7 +80,7 @@ spec:
         - name: POSTGRES_DB
           value: webapp
         - name: POSTGRES_HOST
-          value: postgres
+          value: primary
         - name: POSTGRES_PASSWORD
           value: antinex
         - name: POSTGRES_USER
@@ -92,7 +92,7 @@ spec:
         - name: REDIS_PORT
           value: "6379"
         - name: USE_ENV
-          value: openshift-dev
+          value: openshift-no-hostnames
         - name: USE_VENV
           value: /opt/venv
         - name: WEBAPP_HOST
