--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,4 @@ db.sqlite3-journal
 webapp/drf_network_pipeline/docs/build/*.rst
 webapp/drf_network_pipeline/docs/latest.log
 webapp/staticfiles
+openshift/.pgdeployment
