--- a/openshift/core/deployment.yaml
+++ b/openshift/core/deployment.yaml
@@ -33,7 +33,7 @@ spec:
       - command:
         - /bin/bash
         - -c
-        - cd /opt/antinex-core && . /opt/venv/bin/activate && source /opt/antinex-api/envs/openshift-no-hostnames.env && env | sort && /opt/antinex-core/run-antinex-core.sh
+        - cd /opt/antinex/core && . /opt/venv/bin/activate && source /opt/antinex/api/envs/openshift-no-hostnames.env && env | sort && /opt/antinex/core/run-antinex-core.sh
         env:
         - name: POSTGRES_HOST
           value: primary
