--- a/openshift/pipeline/deployment.yaml
+++ b/openshift/pipeline/deployment.yaml
@@ -33,7 +33,7 @@ spec:
       - command:
         - /bin/bash
         - -c
-        - cd /opt/antinex-pipeline && . /opt/venv/bin/activate && source /opt/antinex-api/envs/openshift-dev.env && env | sort && /opt/antinex-pipeline/network_pipeline/scripts/packets_redis.py
+        - cd /opt/antinex/pipeline && . /opt/venv/bin/activate && source /opt/antinex/api/envs/openshift-dev.env && env | sort && /opt/antinex/pipeline/network_pipeline/scripts/packets_redis.py
         env:
         - name: ANTINEX_BATCH_SIZE
           value: "32"
@@ -75,7 +75,7 @@ spec:
         - name: ANTINEX_PUBLISH_ENABLED
           value: "1"
         - name: ANTINEX_PUBLISH_REQUEST_FILE
-          value: /opt/antinex-client/examples/predict-rows-scaler-full-django.json
+          value: /opt/antinex/client/examples/predict-rows-scaler-full-django.json
         - name: ANTINEX_PUBLISH_TO_CORE
           value: "1"
         - name: ANTINEX_SEED
