--- a/openshift/worker/deployment.yaml
+++ b/openshift/worker/deployment.yaml
@@ -33,7 +33,7 @@ spec:
       - command:
         - /bin/bash
         - -c
-        - cd /opt/antinex-api && . /opt/venv/bin/activate && source /opt/antinex-api/envs/openshift-no-hostnames.env && env | sort && /opt/antinex-api/run-worker.sh && tail -f /etc/hosts
+        - cd /opt/antinex/api && . /opt/venv/bin/activate && source /opt/antinex/api/envs/openshift-no-hostnames.env && env | sort && /opt/antinex/api/run-worker.sh && tail -f /etc/hosts
         env:
         - name: ANTINEX_AUTH_URL
           value: redis://redis:6379/6
