travis docker builds for the api and worker

--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,10 @@ basepython =
 
 [flake8]
 max-line-length = 80
-exclude = .tox/*,./build/*,./venv/*,./.eggs/*,./webapp/drf_network_pipeline/*/migrations
+exclude = .tox/*,./build/*,./venv/*,./.eggs/*,./webapp/drf_network_pipeline/*/migrations,./openshift/
+
+[pycodestyle]
+exclude = .tox/*,./build/*,./venv/*,./.eggs/*,./webapp/drf_network_pipeline/*/migrations,./openshift/
 
 [testenv:lint]
 deps = flake8
