--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ language: python
 python:
   - 3.6
 
+services:
+  - docker
+
 env:
   - DJANGO=2.0
 
@@ -10,6 +13,14 @@ before_install:
   - export DJANGO_SETTINGS_MODULE=drf_network_pipeline.settings
   - export PYTHONPATH=$HOME/builds/jay-johnson/train-ai-with-django-swagger-jwt
   - export PIP_USE_MIRRORS=true
+  - export USE_VERSION=$(cat /opt/antinex/core/setup.py | grep " version=" | sed -e 's/"/ /g' | awk '{print $2}')
+  - export REPO_API=jayjohnson/antinex-api
+  - export REPO_WORKER=jayjohnson/antinex-worker
+  - echo "Building Docker with tag=${USE_VERSION}"
+  - echo ""
+  - echo "Testing Docker Hub credentials username=${DOCKER_USERNAME}"
+  - docker login --username $DOCKER_USERNAME --password $DOCKER_PASSWORD
+  - echo "Docker Hub credentials are working"
   - export ENVIRONMENT=Development
   - export DJANGO_CONFIGURATION=Development
   - export DJANGO_SECRET_KEY=supersecret
@@ -43,10 +54,36 @@ install:
   - pip install -r requirements.txt
 
 script:
-  # - echo "Starting Linting Tests"
-  # - flake8 .
-  # - pycodestyle --exclude=.tox,.eggs,migrations
+  - echo "Starting Linting Tests"
+  - flake8
+  - pycodestyle
   - echo "Preparing DB"
   - . envs/dev.env && echo "Running Tests for Environment=${ENVIRONMENT} DB=${POSTGRES_DB} with antinex.env=${USE_ENV}" && cd webapp && pip list && python manage.py migrate --run-syncdb
   - echo "Starting Unit Tests"
   - python manage.py test
+
+after_success:
+  - export USE_VERSION=$(cat setup.py | grep " version=" | sed -e 's/"/ /g' | awk '{print $2}')
+  - echo "Test Success - Branch=${TRAVIS_BRANCH} Version=${USE_VERSION} Pull Request=${TRAVIS_PULL_REQUEST} Tag=${TRAVIS_TAG}"
+  - if [[ "$TRAVIS_BRANCH" == "master" ]]; then echo -e "Push Container to Docker Hub"; fi
+  - echo "Logging into Docker Hub"
+  - docker login --username $DOCKER_USERNAME --password $DOCKER_PASSWORD
+  - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
+  - export REPO=${REPO_API}
+  - echo "starting: cd docker/api && docker build -f Dockerfile -t ${REPO} ."
+  - cd docker && docker build -f Dockerfile -t $REPO .
+  - echo "docker tag ${REPO} ${REPO}:${USE_VERSION}"
+  - docker tag $REPO $REPO:$USE_VERSION
+  - echo "docker push ${REPO}"
+  - docker push $REPO:latest
+  - echo "docker push ${REPO}:${USE_VERSION}"
+  - docker push $REPO:$USE_VERSION
+  - export REPO=${REPO_WORKER}
+  - echo "starting: cd ../worker && docker build -f Dockerfile -t ${REPO} ."
+  - cd docker && docker build -f Dockerfile -t $REPO .
+  - echo "docker tag ${REPO} ${REPO}:${USE_VERSION}"
+  - docker tag $REPO $REPO:$USE_VERSION
+  - echo "docker push ${REPO}"
+  - docker push $REPO:latest
+  - echo "docker push ${REPO}:${USE_VERSION}"
+  - docker push $REPO:$USE_VERSION
