--- a/openshift/api/deployment.yaml
+++ b/openshift/api/deployment.yaml
@@ -103,7 +103,7 @@ spec:
           value: 0.0.0.0
         - name: WEBAPP_PORT
           value: "8080"
-        image: jayjohnson/ai-core:latest
+        image: jayjohnson/antinex-api:latest
         name: api
         ports:
         - containerPort: 8080
