--- a/.travis.yml
+++ b/.travis.yml
@@ -63,7 +63,7 @@ script:
   - python manage.py test
 
 after_success:
-  - export USE_VERSION=$(cat setup.py | grep " version=" | sed -e 's/"/ /g' | awk '{print $2}')
+  - export USE_VERSION=$(cat /opt/antinex/core/setup.py | grep " version=" | sed -e 's/"/ /g' | awk '{print $2}')
   - echo "Test Success - Branch=${TRAVIS_BRANCH} Version=${USE_VERSION} Pull Request=${TRAVIS_PULL_REQUEST} Tag=${TRAVIS_TAG}"
   - if [[ "$TRAVIS_BRANCH" == "master" ]]; then echo -e "Push Container to Docker Hub"; fi
   - echo "Logging into Docker Hub"
