--- a/.travis.yml
+++ b/.travis.yml
@@ -62,14 +62,14 @@ script:
 
 after_success:
   - export USE_VERSION=1.0.47
-  - echo "Building Docker with tag=${USE_VERSION}"
+  - echo "Building Docker images with tag=${USE_VERSION}"
   - echo "Test Success - Branch=${TRAVIS_BRANCH} Version=${USE_VERSION} Pull Request=${TRAVIS_PULL_REQUEST} Tag=${TRAVIS_TAG}"
   - if [[ "$TRAVIS_BRANCH" == "master" ]]; then echo -e "Push Container to Docker Hub"; fi
   - echo "Logging into Docker Hub"
   - docker login --username $DOCKER_USERNAME --password $DOCKER_PASSWORD
   - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
   - export REPO=${REPO_API}
-  - echo "starting: cd docker/api && docker build -f Dockerfile -t ${REPO} ."
+  - echo "starting: cd ../docker/api && docker build -f Dockerfile -t ${REPO} ."
   - cd docker && docker build -f Dockerfile -t $REPO .
   - echo "docker tag ${REPO} ${REPO}:${USE_VERSION}"
   - docker tag $REPO $REPO:$USE_VERSION
