--- a/.travis.yml
+++ b/.travis.yml
@@ -70,7 +70,7 @@ after_success:
   - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
   - export REPO=${REPO_API}
   - echo "starting: cd ../docker/api && docker build -f Dockerfile -t ${REPO} ."
-  - cd docker && docker build -f Dockerfile -t $REPO .
+  - cd ../docker/api && docker build -f Dockerfile -t $REPO .
   - echo "docker tag ${REPO} ${REPO}:${USE_VERSION}"
   - docker tag $REPO $REPO:$USE_VERSION
   - echo "docker push ${REPO}"
@@ -79,7 +79,7 @@ after_success:
   - docker push $REPO:$USE_VERSION
   - export REPO=${REPO_WORKER}
   - echo "starting: cd ../worker && docker build -f Dockerfile -t ${REPO} ."
-  - cd docker && docker build -f Dockerfile -t $REPO .
+  - cd ../worker && docker build -f Dockerfile -t $REPO .
   - echo "docker tag ${REPO} ${REPO}:${USE_VERSION}"
   - docker tag $REPO $REPO:$USE_VERSION
   - echo "docker push ${REPO}"
