--- a/.travis.yml
+++ b/.travis.yml
@@ -69,8 +69,9 @@ after_success:
   - docker login --username $DOCKER_USERNAME --password $DOCKER_PASSWORD
   - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
   - export REPO=${REPO_API}
-  - echo "starting: cd ../docker/api && docker build -f Dockerfile -t ${REPO} ."
-  - cd ../docker/api && docker build -f Dockerfile -t $REPO .
+  - echo "starting: cd docker/api && docker build -f Dockerfile -t ${REPO} ."
+  - pwd
+  - cd docker/api && docker build -f Dockerfile -t $REPO .
   - echo "docker tag ${REPO} ${REPO}:${USE_VERSION}"
   - docker tag $REPO $REPO:$USE_VERSION
   - echo "docker push ${REPO}"
@@ -79,6 +80,7 @@ after_success:
   - docker push $REPO:$USE_VERSION
   - export REPO=${REPO_WORKER}
   - echo "starting: cd ../worker && docker build -f Dockerfile -t ${REPO} ."
+  - pwd
   - cd ../worker && docker build -f Dockerfile -t $REPO .
   - echo "docker tag ${REPO} ${REPO}:${USE_VERSION}"
   - docker tag $REPO $REPO:$USE_VERSION
