--- a/envs/all-dev.env
+++ b/envs/all-dev.env
@@ -5,6 +5,7 @@ DJANGO_DEBUG=yes
 DJANGO_TEMPLATE_DEBUG=yes
 WEBAPP_HOST=0.0.0.0
 WEBAPP_PORT=8080
+LOG_LEVEL=INFO
 COLLECT_STATICS=1
 POSTGRES_HOST=0.0.0.0
 POSTGRES_PORT=5432
