application names show up in splunk with environment keys on the containers and setting 'export LOG_NAME=<app name>' with searching as: sp -q 'index="antinex" AND name="<app name>"'

--- a/openshift/api/log_to_splunk_deployment.yaml
+++ b/openshift/api/log_to_splunk_deployment.yaml
@@ -105,7 +105,7 @@ spec:
           value: "8080"
         - name: DEPLOY_CONFIG
           value: log_to_splunk
-        - name: COMPONENT_NAME
+        - name: LOG_NAME
           value: api
         - name: ENV_NAME
           value: ocp
