--- a/openshift/core/log_to_splunk_deployment.yaml
+++ b/openshift/core/log_to_splunk_deployment.yaml
@@ -57,8 +57,8 @@ spec:
           value: /opt/venv
         - name: DEPLOY_CONFIG
           value: log_to_splunk
-        - name: COMPONENT_NAME
-          value: api
+        - name: LOG_NAME
+          value: core
         - name: ENV_NAME
           value: ocp
         - name: SHARED_LOG_CFG
