--- a/openshift/jupyter/log_to_splunk_deployment.yaml
+++ b/openshift/jupyter/log_to_splunk_deployment.yaml
@@ -55,8 +55,8 @@ spec:
           value: /opt/data
         - name: DEPLOY_CONFIG
           value: log_to_splunk
-        - name: COMPONENT_NAME
-          value: api
+        - name: LOG_NAME
+          value: jupyter
         - name: ENV_NAME
           value: ocp
         - name: SHARED_LOG_CFG
