--- a/openshift/pipeline/log_to_splunk_deployment.yaml
+++ b/openshift/pipeline/log_to_splunk_deployment.yaml
@@ -97,8 +97,8 @@ spec:
           value: /opt/venv
         - name: DEPLOY_CONFIG
           value: log_to_splunk
-        - name: COMPONENT_NAME
-          value: api
+        - name: LOG_NAME
+          value: pipeline
         - name: ENV_NAME
           value: ocp
         - name: SHARED_LOG_CFG
