new minor version for the improved threading support on the splunk publishers

--- a/.gitignore
+++ b/.gitignore
@@ -138,3 +138,4 @@ webapp/drf_network_pipeline/docs/build/doctrees
 webapp/drf_network_pipeline/docs/latest.log
 webapp/staticfiles
 openshift/.pgdeployment
+.pytest_cache
