shared environment variables for reducing required kubernetes deployments env values

--- a/envs/k8-splunk.env
+++ b/envs/k8-splunk.env
@@ -4,8 +4,11 @@ REDIS_HOST=redis-master
 REDIS_PORT=6379
 WEBAPP_HOST=0.0.0.0
 WEBAPP_PORT=8010
+JUPYTER_PORT=8888
+ANTINEX_URL=https://api-svc:8010
 ANTINEX_API_URL=https://api-svc:8010
 ANTINEX_AUTH_URL=redis://redis-master:6379/6
+ANTINEX_RESULT_AUTH_URL=redis://redis-master:6379/9
 BROKER_URL=redis://redis-master:6379/6
 FORWARD_BROKER_URL=redis://redis-master:6379/0
 ENVIRONMENT=Development
@@ -33,6 +36,7 @@ ANTINEX_KEYFILE=
 DJANGO_ALLOWED_HOSTS=*
 USE_ENV=k8-splunk
 USE_VENV=/opt/venv
+SHARED_DIR=/opt/data
 SHARED_LOG_CFG=/opt/antinex/core/antinex_core/log/k8-logging-splunk.json
 SPLUNK_USER=trex
 SPLUNK_PASSWORD=123321
