--- a/envs/k8-splunk.env
+++ b/envs/k8-splunk.env
@@ -1,49 +1,49 @@
-POSTGRES_HOST=postgres-primary
-POSTGRES_PORT=5432
-REDIS_HOST=redis-master
-REDIS_PORT=6379
-WEBAPP_HOST=0.0.0.0
-WEBAPP_PORT=8010
-JUPYTER_PORT=8888
-ANTINEX_URL=https://api-svc:8010
-ANTINEX_API_URL=https://api-svc:8010
-ANTINEX_AUTH_URL=redis://redis-master:6379/6
-ANTINEX_RESULT_AUTH_URL=redis://redis-master:6379/9
-BROKER_URL=redis://redis-master:6379/6
-FORWARD_BROKER_URL=redis://redis-master:6379/0
-ENVIRONMENT=Development
-DJANGO_CONFIGURATION=Development
-DJANGO_SECRET_KEY=supersecret
-DJANGO_DEBUG=yes
-DJANGO_TEMPLATE_DEBUG=yes
-HTTP_X_FORWARDED_PROTOCOL_KEY=HTTP_X_FORWARDED_PROTO
-COLLECT_STATICS=1
-CELERY_ENABLED=1
-CACHEOPS_ENABLED=1
-NUM_WORKERS=4
-ANTINEX_WORKER_ENABLED=1
-ANTINEX_WORKER_ONLY=0
-ANTINEX_DELIVERY_MODE=persistent
-ANTINEX_EXCHANGE_NAME=webapp.predict.requests
-ANTINEX_EXCHANGE_TYPE=topic
-ANTINEX_QUEUE_NAME=webapp.predict.requests
-ANTINEX_WORKER_SSL_ENABLED=0
-ANTINEX_CA_CERTS=
-ANTINEX_KEYFILE=
-ANTINEX_CERTFILE=
-ANTINEX_TLS_PROTOCOL=
-ANTINEX_KEYFILE=
-DJANGO_ALLOWED_HOSTS=*
-USE_ENV=k8-splunk
-USE_VENV=/opt/venv
-SHARED_DIR=/opt/data
-SHARED_LOG_CFG=/opt/antinex/core/antinex_core/log/k8-logging-splunk.json
-SPLUNK_USER=trex
-SPLUNK_PASSWORD=123321
-SPLUNK_INDEX=antinex
-SPLUNK_ADDRESS=splunk-svc:8088
-SPLUNK_API_ADDRESS=splunk-svc:8089
-SPLUNK_TCP_ADDRESS=splunk-tcp-svc:1514
-SPLUNK_HANDLER_NAME=splunk
-SPLUNK_VERIFY=1
-SPLUNK_DEBUG=0
+export POSTGRES_HOST=postgres-primary
+export POSTGRES_PORT=5432
+export REDIS_HOST=redis-master
+export REDIS_PORT=6379
+export WEBAPP_HOST=0.0.0.0
+export WEBAPP_PORT=8010
+export JUPYTER_PORT=8888
+export ANTINEX_URL=https://api-svc:8010
+export ANTINEX_API_URL=https://api-svc:8010
+export ANTINEX_AUTH_URL=redis://redis-master:6379/6
+export ANTINEX_RESULT_AUTH_URL=redis://redis-master:6379/9
+export BROKER_URL=redis://redis-master:6379/6
+export FORWARD_BROKER_URL=redis://redis-master:6379/0
+export ENVIRONMENT=Development
+export DJANGO_CONFIGURATION=Development
+export DJANGO_SECRET_KEY=supersecret
+export DJANGO_DEBUG=yes
+export DJANGO_TEMPLATE_DEBUG=yes
+export HTTP_X_FORWARDED_PROTOCOL_KEY=HTTP_X_FORWARDED_PROTO
+export COLLECT_STATICS=1
+export CELERY_ENABLED=1
+export CACHEOPS_ENABLED=1
+export NUM_WORKERS=4
+export ANTINEX_WORKER_ENABLED=1
+export ANTINEX_WORKER_ONLY=0
+export ANTINEX_DELIVERY_MODE=persistent
+export ANTINEX_EXCHANGE_NAME=webapp.predict.requests
+export ANTINEX_EXCHANGE_TYPE=topic
+export ANTINEX_QUEUE_NAME=webapp.predict.requests
+export ANTINEX_WORKER_SSL_ENABLED=0
+export ANTINEX_CA_CERTS=
+export ANTINEX_KEYFILE=
+export ANTINEX_CERTFILE=
+export ANTINEX_TLS_PROTOCOL=
+export ANTINEX_KEYFILE=
+export DJANGO_ALLOWED_HOSTS=*
+export USE_ENV=k8-splunk
+export USE_VENV=/opt/venv
+export SHARED_DIR=/opt/data
+export SHARED_LOG_CFG=/opt/antinex/core/antinex_core/log/k8-logging-splunk.json
+export SPLUNK_USER=trex
+export SPLUNK_PASSWORD=123321
+export SPLUNK_INDEX=antinex
+export SPLUNK_ADDRESS=splunk-svc:8088
+export SPLUNK_API_ADDRESS=splunk-svc:8089
+export SPLUNK_TCP_ADDRESS=splunk-tcp-svc:1514
+export SPLUNK_HANDLER_NAME=splunk
+export SPLUNK_VERIFY=1
+export SPLUNK_DEBUG=0
