fix for core -> worker publishing for results. the worker is using BROKER_URL

--- a/envs/k8-splunk.env
+++ b/envs/k8-splunk.env
@@ -9,7 +9,7 @@ export ANTINEX_URL=https://api-svc:8010
 export ANTINEX_API_URL=https://api-svc:8010
 export ANTINEX_AUTH_URL=redis://redis-master:6379/6
 export ANTINEX_RESULT_AUTH_URL=redis://redis-master:6379/9
-export BROKER_URL=redis://redis-master:6379/6
+export ANTINEX_CORE_BROKER_URL=redis://redis-master:6379/6
 export FORWARD_BROKER_URL=redis://redis-master:6379/0
 export ENVIRONMENT=Development
 export DJANGO_CONFIGURATION=Development
